# rag-eval-mlflow

./: .env.backup  README.md  create_eval_dataset.ipynb  custom_metric.py  evaluated_items_2024-09-25_14-44-52.jsonl  pyproject.toml  rag_pipeline_eval.ipynb
NLP_eval_dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
evaluation_results/: rag_eval_runs.csv  robustness_runs.csv
src/: rag.py
syntetic_data/: generated_items_2024-09-25_14-43-38.jsonl
