[tool.poetry]
name = "mlflow-llmops"
version = "0.1.0"
description = ""
authors = ["Cyril Kondratenko <kkn1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "2.15.1"
datasets = "^3.0.0"
transformers = "^4.44.2"
sentencepiece = "^0.2.0"
langchain-openai = "^0.2.0"
langchain = "^0.3.0"
prometheus-eval = "^0.1.20"
faiss-cpu = "^1.8.0.post1"
langchain-community = "^0.3.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
